# deepwalk

./: README.md  pyproject.toml
deepwalk/: cli.py  graph.py  walks.py
deepwalk/examples/: edges.txt
