[tool.poetry]
name = "deepwalk"
version = "0.1.0"
description = "Fork of the original DeepWalk."
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.scripts]
deepwalk = "deepwalk.cli:deepwalk"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"